added images and updated readme.md

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <aside>
         <button id="add-user">Add User 👱‍♂️</button>
         <button id="double">Double Money 💰</button>
-        <button id="show-millionaires">Show Only Millionaires 💵</button>
+        <!-- Testing class="show" -->
+        <button id="show-millionaires" class="show">Show Only Millionaires 💵</button>
         <button id="sort">Sort by Richest ↓</button>
         <button id="calculate-wealth">Calculate entire Wealth 🧮</button>
       </aside>
